# relay

./: .gitignore  BUILD.bazel  CLAUDE.md  Cargo.toml  MODULE.bazel  rivet.yaml
artifacts/swarch/: SWARCH-RELAY-001.yaml
artifacts/swdd/: SWDD-CCSDS-001.yaml  SWDD-CFDP-001.yaml  SWDD-CI-001.yaml  SWDD-CS-001.yaml  SWDD-DS-001.yaml  SWDD-FM-001.yaml  SWDD-HK-001.yaml  SWDD-HS-001.yaml  SWDD-LC-001.yaml  SWDD-MD-001.yaml  SWDD-MM-001.yaml  SWDD-SC-001.yaml  SWDD-SCA-001.yaml  SWDD-SCH-001.yaml  SWDD-TBL-001.yaml  SWDD-TO-001.yaml
artifacts/swreq/: SWREQ-CCSDS-P01.yaml  SWREQ-CFDP-P01.yaml  SWREQ-CI-P01.yaml  SWREQ-CS-P01.yaml  SWREQ-DS-P01.yaml  SWREQ-FM-P01.yaml  SWREQ-HK-P01.yaml  SWREQ-HS-P01.yaml  SWREQ-LC-P01.yaml  SWREQ-MD-P01.yaml  SWREQ-MM-P01.yaml  SWREQ-SC-P01.yaml  SWREQ-SCA-P01.yaml  SWREQ-SCH-P01.yaml  SWREQ-TBL-P01.yaml  SWREQ-TO-P01.yaml
artifacts/sysreq/: STKH-RELAY-001.yaml  SYSREQ-CCSDS-001.yaml  SYSREQ-CFDP-001.yaml  SYSREQ-CI-001.yaml  SYSREQ-CS-001.yaml  SYSREQ-DS-001.yaml  SYSREQ-FM-001.yaml  SYSREQ-HK-001.yaml  SYSREQ-HS-001.yaml  SYSREQ-LC-001.yaml  SYSREQ-MD-001.yaml  SYSREQ-MM-001.yaml  SYSREQ-SC-001.yaml  SYSREQ-SCA-001.yaml  SYSREQ-SCH-001.yaml  SYSREQ-TBL-001.yaml  SYSREQ-TO-001.yaml
artifacts/verification/: FV-CCSDS-001.yaml  FV-CFDP-001.yaml  FV-CI-001.yaml  FV-CS-001.yaml  FV-DS-001.yaml  FV-FM-001.yaml  FV-HK-001.yaml  FV-HS-001.yaml  FV-LC-001.yaml  FV-MD-001.yaml  FV-MM-001.yaml  FV-SC-001.yaml  FV-SCA-001.yaml  FV-SCH-001.yaml  FV-TBL-001.yaml  FV-TO-001.yaml  SV-RELAY-001.yaml  UV-CCSDS-001.yaml  UV-CFDP-001.yaml  UV-CI-001.yaml  UV-CS-001.yaml  UV-DS-001.yaml  UV-FM-001.yaml  UV-HK-001.yaml  UV-HS-001.yaml  UV-LC-001.yaml  UV-MD-001.yaml  UV-MM-001.yaml  UV-SC-001.yaml  UV-SCA-001.yaml  UV-SCH-001.yaml  UV-TBL-001.yaml  UV-TO-001.yaml
crates/relay-ccsds/: Cargo.toml
crates/relay-ccsds/plain/src/: engine.rs  lib.rs  sensor_wire.rs
crates/relay-ccsds/src/: engine.rs  lib.rs  sensor_wire.rs
crates/relay-cfdp/: Cargo.toml
crates/relay-cfdp/plain/src/: engine.rs
crates/relay-cfdp/src/: engine.rs  lib.rs
crates/relay-ci/: Cargo.toml
crates/relay-ci/plain/src/: engine.rs
crates/relay-ci/src/: engine.rs
crates/relay-cs/: Cargo.toml
crates/relay-cs/plain/src/: core.rs  engine.rs
crates/relay-cs/src/: core.rs  engine.rs  lib.rs
crates/relay-ds/: Cargo.toml
crates/relay-ds/plain/src/: engine.rs
crates/relay-ds/src/: engine.rs
crates/relay-fm/: Cargo.toml
crates/relay-fm/plain/src/: engine.rs
crates/relay-fm/src/: engine.rs
crates/relay-hk/: Cargo.toml
crates/relay-hk/plain/src/: engine.rs
crates/relay-hk/src/: core.rs  engine.rs  lib.rs  wasm_component.rs
crates/relay-hk/wasm/: Cargo.toml
crates/relay-hk/wit/: housekeeping.wit
crates/relay-hs/: Cargo.toml
crates/relay-hs/plain/src/: engine.rs
crates/relay-hs/src/: engine.rs
crates/relay-lc/: Cargo.toml
crates/relay-lc-diff/: Cargo.toml
crates/relay-lc-diff/src/: lib.rs
crates/relay-lc/include/: relay_lc.h
crates/relay-lc/plain/src/: c_api.rs  engine.rs  lib.rs
crates/relay-lc/src/: core.rs  engine.rs  lib.rs  wasm_component.rs  wasm_stream_component.rs
crates/relay-lc/wasm/: Cargo.toml
crates/relay-lc/wit/: limit_checker.wit  limit_checker_stream.wit
crates/relay-md/: Cargo.toml
crates/relay-md/plain/src/: engine.rs
crates/relay-md/src/: engine.rs
crates/relay-mm/: Cargo.toml
crates/relay-mm/plain/src/: engine.rs
crates/relay-mm/src/: engine.rs
crates/relay-primitives/: Cargo.toml
crates/relay-primitives/plain/src/: ccsds.rs  compare.rs  crc32.rs  filter.rs  lib.rs  merge.rs  persistence.rs  rate_divide.rs  time_gate.rs
crates/relay-primitives/src/: ccsds.rs  compare.rs  crc32.rs  filter.rs  lib.rs  merge.rs  persistence.rs  rate_divide.rs  time_gate.rs
crates/relay-sc/: Cargo.toml
crates/relay-sc/plain/src/: engine.rs
crates/relay-sc/src/: engine.rs  lib.rs  wasm_component.rs
crates/relay-sc/wasm/: Cargo.toml
crates/relay-sc/wit/: stored_command.wit
crates/relay-sca/: Cargo.toml
crates/relay-sca/plain/src/: engine.rs
crates/relay-sca/src/: engine.rs  lib.rs
crates/relay-sch/: Cargo.toml
crates/relay-sch/plain/src/: engine.rs
crates/relay-sch/src/: component.rs  core.rs  engine.rs  lib.rs  wasm_component.rs  wasm_lib.rs
crates/relay-sch/wasm/: Cargo.toml
crates/relay-sch/wit/: runner.wit  scheduler.wit
crates/relay-tbl/: Cargo.toml
crates/relay-tbl/plain/src/: engine.rs
crates/relay-tbl/src/: engine.rs  lib.rs
crates/relay-to/: Cargo.toml
crates/relay-to/plain/src/: engine.rs
crates/relay-to/src/: engine.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_lc_evaluate.rs  fuzz_sch_tick.rs
host/relay-es/: Cargo.toml
host/relay-evs/: Cargo.toml
host/relay-sb/: Cargo.toml
host/relay-sb/src/: core.rs  lib.rs
host/relay-time/: Cargo.toml
proofs/lean/: BUILD.bazel  BackpressureSafety.lean  CompositionalWcet.lean  WcetAnalysis.lean
proofs/rocq/: BUILD.bazel  cfdp_proofs.v  hs_proofs.v  lc_proofs.v  sc_proofs.v  sch_proofs.v
tests/host-runner/: Cargo.toml
tests/host-runner/src/: main.rs
wit/components/checksum/: component.wit
wit/components/data-storage/: component.wit
wit/components/file-manager/: component.wit
wit/components/housekeeping/: component.wit
wit/components/limit-checker/: component.wit
wit/components/scheduler/: component.wit
wit/components/stored-command/: component.wit
wit/components/table-services/: component.wit
wit/interfaces/relay-common-types/: types.wit
wit/interfaces/relay-events/: events.wit
wit/interfaces/relay-executive/: executive.wit
wit/interfaces/relay-software-bus/: bus.wit
wit/interfaces/relay-tables/: tables.wit
wit/interfaces/relay-time/: time.wit
wit/primitives/: transformers.wit
wit/worlds/: relay-minimal.wit
