load("@rules_wasm_component//rust:defs.bzl", "rust_wasm_component_bindgen")
load("@rules_wasm_component//wit:defs.bzl", "wit_library")

package(default_visibility = ["//visibility:public"])

# ═══════════════════════════════════════════════════════════════
# WIT interface
# ═══════════════════════════════════════════════════════════════

wit_library(
    name = "relay_scheduler_wit",
    srcs = ["crates/relay-sch/wit/scheduler.wit"],
    package_name = "pulseengine:relay-scheduler",
    world = "relay-scheduler",
)

# ═══════════════════════════════════════════════════════════════
# P3 WASM component
# ═══════════════════════════════════════════════════════════════

rust_wasm_component_bindgen(
    name = "relay-sch",
    srcs = ["crates/relay-sch/src/wasm_component.rs"],
    wit = ":relay_scheduler_wit",
    wasi_version = "p3",
    profiles = ["release"],
)

# ═══════════════════════════════════════════════════════════════
# Limit Checker
# ═══════════════════════════════════════════════════════════════

wit_library(
    name = "relay_limit_checker_wit",
    srcs = ["crates/relay-lc/wit/limit_checker.wit"],
    package_name = "pulseengine:relay-limit-checker",
    world = "relay-limit-checker",
)

rust_wasm_component_bindgen(
    name = "relay-lc",
    srcs = ["crates/relay-lc/src/wasm_component.rs"],
    wit = ":relay_limit_checker_wit",
    wasi_version = "p3",
    profiles = ["release"],
)

# ═══════════════════════════════════════════════════════════════
# CLI Runner — imports scheduler, exercises it, prints results
# ═══════════════════════════════════════════════════════════════

wit_library(
    name = "relay_runner_wit",
    srcs = ["crates/relay-sch/wit/runner.wit"],
    deps = [
        ":relay_scheduler_wit",
        "@wasi_cli//:cli",
        "@wasi_clocks//:clocks",
        "@wasi_filesystem//:filesystem",
        "@wasi_io//:streams",
        "@wasi_random//:random",
        "@wasi_sockets//:sockets",
    ],
    package_name = "pulseengine:relay-runner",
    world = "relay-runner",
)

rust_wasm_component_bindgen(
    name = "relay-runner",
    srcs = ["crates/relay-sch/src/runner.rs"],
    wit = ":relay_runner_wit",
    wasi_version = "p3",
    profiles = ["release"],
)

# Compose: plug scheduler into runner
load("@rules_wasm_component//wac:defs.bzl", "wac_plug")

wac_plug(
    name = "relay-sch-cli",
    plugs = [":relay-sch"],
    socket = ":relay-runner",
)
