load("@rules_wasm_component//rust:defs.bzl", "rust_wasm_component_bindgen")
load("@rules_wasm_component//wit:defs.bzl", "wit_library")
load("@rules_wasm_component//wasm:defs.bzl", "meld_fuse", "synth_compile")
load("@rules_verus//verus:defs.bzl", "verus_library", "verus_test")

package(default_visibility = ["//visibility:public"])

# ═══════════════════════════════════════════════════════════════
# Verus verification (Track 1: SMT/Z3)
# ═══════════════════════════════════════════════════════════════

verus_test(
    name = "relay_lc_verus_test",
    srcs = [
        "crates/relay-lc/src/lib.rs",
        "crates/relay-lc/src/engine.rs",
    ],
    crate_name = "relay_lc",
)

verus_test(
    name = "relay_sch_verus_test",
    srcs = [
        "crates/relay-sch/src/lib.rs",
        "crates/relay-sch/src/engine.rs",
    ],
    crate_name = "relay_sch",
)

verus_test(
    name = "relay_sc_verus_test",
    srcs = [
        "crates/relay-sc/src/lib.rs",
        "crates/relay-sc/src/engine.rs",
    ],
    crate_name = "relay_sc",
)

verus_test(
    name = "relay_hk_verus_test",
    srcs = [
        "crates/relay-hk/src/lib.rs",
        "crates/relay-hk/src/engine.rs",
    ],
    crate_name = "relay_hk",
)

verus_test(
    name = "relay_cs_verus_test",
    srcs = [
        "crates/relay-cs/src/lib.rs",
        "crates/relay-cs/src/engine.rs",
    ],
    crate_name = "relay_cs",
)

# ═══════════════════════════════════════════════════════════════
# WIT interface
# ═══════════════════════════════════════════════════════════════

wit_library(
    name = "relay_scheduler_wit",
    srcs = ["crates/relay-sch/wit/scheduler.wit"],
    package_name = "pulseengine:relay-scheduler",
    world = "relay-scheduler",
)

# ═══════════════════════════════════════════════════════════════
# P3 WASM component
# ═══════════════════════════════════════════════════════════════

rust_wasm_component_bindgen(
    name = "relay-sch",
    srcs = ["crates/relay-sch/src/wasm_component.rs"],
    wit = ":relay_scheduler_wit",
    wasi_version = "p3",
    profiles = ["release"],
)

# ═══════════════════════════════════════════════════════════════
# Limit Checker
# ═══════════════════════════════════════════════════════════════

wit_library(
    name = "relay_limit_checker_wit",
    srcs = ["crates/relay-lc/wit/limit_checker.wit"],
    package_name = "pulseengine:relay-limit-checker",
    world = "relay-limit-checker",
)

rust_wasm_component_bindgen(
    name = "relay-lc",
    srcs = ["crates/relay-lc/src/wasm_component.rs"],
    wit = ":relay_limit_checker_wit",
    wasi_version = "p3",
    profiles = ["release"],
)

# ═══════════════════════════════════════════════════════════════
# Limit Checker — STREAM TRANSFORMER (P3 native)
# ═══════════════════════════════════════════════════════════════

wit_library(
    name = "relay_limit_checker_stream_wit",
    srcs = ["crates/relay-lc/wit/limit_checker_stream.wit"],
    package_name = "pulseengine:relay-limit-checker-stream",
    world = "relay-limit-checker-stream",
)

rust_wasm_component_bindgen(
    name = "relay-lc-stream",
    srcs = ["crates/relay-lc/src/wasm_stream_component.rs"],
    wit = ":relay_limit_checker_stream_wit",
    wasi_version = "p3",
    profiles = ["release"],
    deps = ["@crates//:wit-bindgen"],
)

# ═══════════════════════════════════════════════════════════════
# Stored Command
# ═══════════════════════════════════════════════════════════════

wit_library(
    name = "relay_stored_command_wit",
    srcs = ["crates/relay-sc/wit/stored_command.wit"],
    package_name = "pulseengine:relay-stored-command",
    world = "relay-stored-command",
)

rust_wasm_component_bindgen(
    name = "relay-sc",
    srcs = ["crates/relay-sc/src/wasm_component.rs"],
    wit = ":relay_stored_command_wit",
    wasi_version = "p3",
    profiles = ["release"],
)

# ═══════════════════════════════════════════════════════════════
# Housekeeping
# ═══════════════════════════════════════════════════════════════

wit_library(
    name = "relay_housekeeping_wit",
    srcs = ["crates/relay-hk/wit/housekeeping.wit"],
    package_name = "pulseengine:relay-housekeeping",
    world = "relay-housekeeping",
)

rust_wasm_component_bindgen(
    name = "relay-hk",
    srcs = ["crates/relay-hk/src/wasm_component.rs"],
    wit = ":relay_housekeeping_wit",
    wasi_version = "p3",
    profiles = ["release"],
)

# ═══════════════════════════════════════════════════════════════
# CLI Runner — imports scheduler, exercises it, prints results
# ═══════════════════════════════════════════════════════════════

wit_library(
    name = "relay_runner_wit",
    srcs = ["crates/relay-sch/wit/runner.wit"],
    deps = [
        ":relay_scheduler_wit",
        "@wasi_cli//:cli",
        "@wasi_clocks//:clocks",
        "@wasi_filesystem//:filesystem",
        "@wasi_io//:streams",
        "@wasi_random//:random",
        "@wasi_sockets//:sockets",
    ],
    package_name = "pulseengine:relay-runner",
    world = "relay-runner",
)

rust_wasm_component_bindgen(
    name = "relay-runner",
    srcs = ["crates/relay-sch/src/runner.rs"],
    wit = ":relay_runner_wit",
    wasi_version = "p3",
    profiles = ["release"],
)

# Compose: plug scheduler into runner
load("@rules_wasm_component//wac:defs.bzl", "wac_plug")

wac_plug(
    name = "relay-sch-cli",
    plugs = [":relay-sch"],
    socket = ":relay-runner",
)

# ═══════════════════════════════════════════════════════════════
# FULL PIPELINE: Build → Fuse → Compile to ARM
# ═══════════════════════════════════════════════════════════════

# Fuse scheduler + limit checker into single core module
meld_fuse(
    name = "relay-fused",
    components = [
        ":relay-sch",
        ":relay-lc",
    ],
)

# Compile fused module to ARM Cortex-M4F ELF
synth_compile(
    name = "relay-firmware",
    wasm_module = ":relay-fused",
    target = "cortex-m4f",
)

# Fuse ALL five engines
meld_fuse(
    name = "relay-all-fused",
    components = [
        ":relay-sch",
        ":relay-lc",
        ":relay-sc",
        ":relay-hk",
    ],
)

# Compile all-fused to ARM
synth_compile(
    name = "relay-all-firmware",
    wasm_module = ":relay-all-fused",
    target = "cortex-m4f",
)
