[package]
name = "relay-hk"
description = "Relay Housekeeping — stream combiner: heartbeats + sensors → hk packets"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = { workspace = true, default-features = false }
