[package]
name = "relay-sc"
description = "Relay Stored Command — autonomous command sequencing with time tags"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
# Cargo tests use plain/ (verus-stripped). Verus verification uses src/ via Bazel.
path = "plain/src/lib.rs"
crate-type = ["rlib"]

[dependencies]
wit-bindgen = { workspace = true, default-features = false }
