[package]
name = "relay-sch"
description = "Relay Scheduler — stream transformer: ticks → scheduled actions"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = { workspace = true, default-features = false }

# no_std + no alloc: WASM components run in bounded memory.
# All allocation through Kiln capability system or static buffers.
